Занятие 32 Django REST - Тесты

--- a/Схемы/Шпаргалки/Библиотеки.md
+++ b/Схемы/Шпаргалки/Библиотеки.md
@@ -38,7 +38,15 @@
 
 - `SqlAlchemy` - [docs](https://docs.sqlalchemy.org/en/20/).
     Для работы с реляционными базами данных с применением технологии ORM.
-- `Faker` - [docs](https://faker.readthedocs.io/en/master/).
-    Генерирует правдоподобные, но вымышленные данные.
 - `requests` - [docs](https://requests.readthedocs.io/en/latest/index.html).
     Библиотека для работы с HTTP-запросами (синхронная).
+
+
+## Для тестов
+
+- `Faker` - [docs](https://faker.readthedocs.io/en/master/).
+    Генерирует правдоподобные, но вымышленные данные.
+- `factory-boy` - [docs](https://factoryboy.readthedocs.io/en/stable/introduction.html).
+    Упрощает создание тестовых данных для работы с моделями в Django.
+- `coverage` - [docs](https://coverage.readthedocs.io/en/latest/cmd.html).
+    Инструмент для измерения и анализа покрытия кода тестами в программах на Python.
